@@ -63,6 +63,13 @@ where valid variable names (<VAR NAME>) and their acceptable values (<VAR VAL>)
 are listed below. Note that the default value is listed immediately after the
 variable name.
 
+.TP
+.B burndown=no
+When set to "yes", VIT will display the time until convergence in the upper
+left corner. It is set to "no" by default because it requires extra time to
+obtain (from running 'task burndown' in the background. This variable was
+essentially set to "yes" for VIT versions 1.2 and below.
+
 .SH EXAMPLES
 .SS EXTERNAL COMMANDS
 Note that for many of the examples, you need to have the appropriate extension
